--- a/stylesheets/sass/partials/_console.scss
+++ b/stylesheets/sass/partials/_console.scss
@@ -4,7 +4,7 @@
 
 #console {
 	position: relative;
-	height: 100%; 
+	height: 100%;
 	z-index: $z-console;
 	@include flex(1);
 }
@@ -14,8 +14,5 @@
 	margin-top: $infobar-height;
 	position: relative;
 	overflow: auto;
-	padding: 10px;
+	padding-bottom: 100px;
 }
-
-
-
