--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -737,9 +737,11 @@ th {
   top: -50px;
   text-align: center;
   z-index: 920;
+  pointer-events: none;
 }
 
 #toolbar {
+  pointer-events: all;
   width: auto;
   height: 50px;
   border-radius: 10px 10px 0px 0px;
@@ -837,7 +839,7 @@ th {
   margin-top: 30px;
   position: relative;
   overflow: auto;
-  padding: 10px;
+  padding-bottom: 100px;
 }
 
 .search-overlay {
@@ -940,12 +942,12 @@ form input:focus {
 }
 @media (max-width: 1000px) {
   .code-window-wrapper {
-    width: 100% !important;
+    width: 100%;
   }
 }
 .code-window-wrapper.full-screen {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   height: 100%;
   width: 100%;
@@ -954,6 +956,12 @@ form input:focus {
   -webkit-transition: all ease 0.75s;
   -moz-transition: all ease 0.75s;
   transition: all ease 0.75s;
+}
+.code-window-wrapper.full-screen .code-window {
+  border-radius: 0px;
+}
+.code-window-wrapper.full-screen .code-window .CodeMirror {
+  height: 100%;
 }
 .code-window-wrapper.is-dragging .code-window {
   box-shadow: 0px 0px 10px #45a0b2;
